--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "dotenv": "^16.1.4",
     "express": "^4.18.2",
     "mariadb": "^3.1.2",
-    "nodemon": "^2.0.22"
+    "nodemon": "^2.0.22",
+    "react": "^18.2.0"
   }
 }
