--- a/backend/.env-local
+++ b/backend/.env-local
@@ -1,7 +1,7 @@
 //port
 PORT=3001
 //Database
-DB_HOST=localhost
-DB_USER=celian
-DB_PASS='' //signpass
-DB_NAME=signature
+DB_HOST='10.1.1.12'
+DB_USER='signuser'
+DB_PASS='pwdsignuser' //signpass
+DB_NAME='signature'
